<resources>
    <string name="app_name">geoinfo</string>

    <string name="capture">Capture Image</string>
    <string name="display_image">Display Image</string>
    <string name="imageViewDesc">Holds taken image</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync position periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="storage_header">Storage</string>

    <!-- Storage Preferences -->
    <string name="storage_title">Default storage</string>
    <string name="display_map">Display map</string>

    <string name="send_data">Enregistrer</string>
    <string name="location">Longitude : %f Latitude : %f</string>

    <string name="add_image">Add image</string>
    <string name="list_images">List all images</string>

    <string name="textImage">%s</string>
    <string name="textView">Ajouter un texte à votre image</string>
    <string name="cancel">Annuler</string>

</resources>