<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/capture"
        android:onClick="captureImage"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/display_map"
        android:onClick="displayMap"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        />
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/list_images"
        android:onClick="imageList"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:onClick="settings"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        />
</LinearLayout>